# agentic-code-platform

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
eval/: dataset.json  run_eval.py
scripts/: seed_repo.py
src/: config.py  main.py
src/api/: query.py  repos.py  webhooks.py
src/db/: database.py  repos.py
src/ingestion/: chunker.py  cloner.py  embedder.py  worker.py
src/models/: __init__.py
src/observability/: tracing.py
src/retrieval/: generator.py  retriever.py
tests/: test_chunker.py
