[project]
name = "codebase-assistant"
version = "0.1.0"
description = "AI assistant that understands codebases via AST-aware chunking and vector search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-languages>=1.10",
    "upstash-vector>=0.5",
    "qstash>=2.0",
    "groq>=0.11",
    "openai>=1.50",
    "langfuse>=2.0",
    "ragas>=0.1",
    "datasets>=2.0",
    "gitpython>=3.1",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "tiktoken>=0.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
